--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -8,6 +8,15 @@
     android:paddingBottom="16dp"
     tools:context="zip.moodio.LogActivity">
 
+    <EditText
+        android:id="@+id/annotation"
+        android:layout_width="240dp"
+        android:layout_height="120dp"
+        android:text="Enter annotation here..."
+        android:layout_marginBottom="105dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
     <ExpandableListView
         android:id="@+id/expList"
         android:layout_width="match_parent"
@@ -17,6 +26,9 @@
         android:dividerHeight="0.5dp"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="#000000"
-        />
+        android:layout_above="@id/annotation"
+        android:scrollbars="vertical" />
+
+
 
 </RelativeLayout>
