--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -13,22 +13,32 @@
         android:layout_width="240dp"
         android:layout_height="120dp"
         android:text="Enter annotation here..."
-        android:layout_marginBottom="105dp"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/submit"
         android:layout_centerHorizontal="true" />
 
     <ExpandableListView
         android:id="@+id/expList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.02"
         android:dividerHeight="0.5dp"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="#000000"
-        android:layout_above="@id/annotation"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/annotation" />
 
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="submit"/>
 
 
 </RelativeLayout>
