--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -11,7 +11,7 @@
     <EditText
         android:id="@+id/annotation"
         android:layout_width="240dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:text="Enter annotation here..."
         android:layout_above="@+id/submit"
         android:layout_centerHorizontal="true" />
@@ -20,6 +20,7 @@
         android:id="@+id/expList"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_above="@+id/moodIntensity"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.02"
         android:dividerHeight="0.5dp"
@@ -28,17 +29,24 @@
         android:scrollbars="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/annotation" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
+        android:onClick="submit"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <NumberPicker
+        android:id="@+id/moodIntensity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/annotation"
         android:layout_centerHorizontal="true"
-        android:onClick="submit"/>
+        android:orientation="vertical" />
 
 
 </RelativeLayout>
