--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -48,5 +48,17 @@
         android:layout_centerHorizontal="true"
         android:orientation="vertical" />
 
+    <TextView
+        android:id="@+id/moodIntensityLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Mood Intensity:"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignBottom="@+id/moodIntensity"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="48dp" />
+
 
 </RelativeLayout>
