--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     tools:context="zip.moodio.HomeActivity">
 
+    <ImageView
+        android:id="@+id/homeScreenPicture"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/p_meadow"
+        android:scaleType="centerCrop"/>
+
     <Button
         android:id="@+id/logButton"
         android:layout_width="wrap_content"
@@ -31,7 +38,8 @@
         android:text="Help"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/dataButton"
-        android:layout_toEndOf="@+id/dataButton" />
+        android:layout_toEndOf="@+id/dataButton"
+        android:onClick="goToHelpScreen" />
 
     <Button
         android:id="@+id/settingsButton"
@@ -40,6 +48,7 @@
         android:text="Settings"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/helpButton"
-        android:layout_toEndOf="@+id/helpButton" />
+        android:layout_toEndOf="@+id/helpButton"
+        android:onClick="goToSettingsScreen"/>
 
 </RelativeLayout>
